tests/baselines/reference/TupleType6.errors.txt
tests/cases/conformance/parser/ecmascript5/TupleTypes/TupleType6.ts(1,16): error TS1110: Type expected.


==== tests/cases/conformance/parser/ecmascript5/TupleTypes/TupleType6.ts (1 errors) ====
    var v: [number,,]
                   ~
!!! error TS1110: Type expected.